# JISP

./: .gitignore  README.md  add_data.py  add_recommended_allocation.py  add_recommended_column.py  create_tables.py  direct_sql_update.py  fix_allocations.py  fix_data.py  fix_recommendations.py  force_allocations.py  init_db.py  main.py  pyproject.toml  query_db.py  reset_db.py  run_training.py  test_active_learning.py  test_allocation_fix.py  test_field_names.py  train_and_allocate.py
alembic/: env.py
app/: main.py
app/api/v1/endpoints/: insights.py  intelligence.py  parishes.py  test_allocations.py
app/core/: config.py
app/db/: init_db.py  session.py
app/ml/: active_learning.py
app/ml/features/: feature_engineering.py
app/ml/models/: crime_prediction.py  resource_allocator.py
app/ml/training/: initial_training.py  synthetic_data.py
app/models/: models.py
app/schemas/: intelligence.py  parish.py  prediction.py
app/services/: allocations_service.py  allocations_services.py  insights.py  validation.py
app/socket/: events.py  manager.py
